# STM32_blinkDevOps

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  securite.yml
cmake/: stm32_flags.cmake
include/: gpio.hpp
scripts/: build.sh  clang-tidy.sh  codeql.sh  flash_jlink.sh  format.sh  static_analysis.sh
src/: gpio.cpp  main.cpp
toolchain/: arm-gcc-toolchain.cmake
